[package]
name = "cogito"
version = "0.1.0"
authors = ["Yang Keao <keao.yang@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"
lazy_static = "1.4.0"
inferno = "0.9.0"
rustc-demangle = "0.1.16"
crossbeam = "0.7.2"

[dev-dependencies]
rand = "0.7.2"
